--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
 .App {
-  text-align: center;
+  text-align: center;;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container>Nav{
+  background-color: rgb(0, 0, 0);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+  text-decoration: solid;
+  color: rgb(52, 62, 201);
 }
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #fefeff;
+  min-height: 125vh;
+  width: 195vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.Memberform{
+  margin-left: 1px;
+
+  width: 1000px;
+  height: 800px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.HomeForm>Button{
+  background-color: black;
+  justify-content: right;
 }
+
+.col>input, .col>select{
+  margin-bottom: 20px; 
+}
+.Thirdform>button{
+  margin-top: 20px;
+  width: 500px;
+}
+
+.first_container,.second_container,.third_container{
+  text-align: center;
+  color: rgb(52, 62, 201);
+  margin-top: 15px;
+}
+.tabs_container{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 1100px;
+  height: 1500px;
+  background: #fffefe;
+  margin: 100px auto 0;
+  word-break: break-all;
+  border: 1px solid rgba(0, 0, 0, 0.274);
+}
+
+.bloc-tabs {
+  display: flex;
+}
+.tabs {
+  padding: 15px;
+  text-align: center;
+  width: 50%;
+  background: rgba(128, 128, 128, 0.075);
+  cursor: pointer;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.274);
+  box-sizing: content-box;
+  position: relative;
+  outline: none;
+}
+.tabs:not(:last-child){
+  border-right: 1px solid rgba(0, 0, 0, 0.274);
+}
+
+.active-tabs  {
+  background: white;
+  border-bottom: 1px solid transparent;
+}
+
+.active-tabs::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(100% + 2px);
+  height: 5px;
+  background: rgb(88, 147, 241);
+}
+
+
+
+button {
+  border: none;
+  
+}
+.content-tabs {
+  flex-grow : 1;
+}
+.content {
+  background: white;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+.content h2 {
+  padding: 0px 0 5px 0px;
+}
+.content hr {
+  width: 100px;
+  height: 2px;
+  background: #222;
+  margin-bottom: 5px;
+}
+.content p {
+  width: 100%;
+  height: 100%;
+}
+.active-content {
+  display: block;
+}
+
